updates for pre-launch

--- a/index.html
+++ b/index.html
@@ -1482,14 +1482,14 @@
                     </div>
                     <div class="font-mono text-sm space-y-2">
                         <div class="text-gray-500"># List available templates</div>
-                        <div class="text-accent-500">$ noundry templates list --category webapp</div>
+                        <div class="text-accent-500">$ nd templates list --category webapp</div>
                         <div class="text-green-400">✓ NDC.Templates.WebApp - Full-stack web application</div>
                         <div class="text-green-400">✓ NDC.Templates.Api - REST API with authentication</div>
                         <div class="text-green-400">✓ NDC.Templates.MinimalApi - Minimal API template</div>
                         <div class="text-green-400">✓ NDC.Templates.Blazor - Blazor WebAssembly app</div>
 
                         <div class="text-gray-500 mt-3"># Install and create new project</div>
-                        <div class="text-accent-500">$ noundry templates install NDC.Templates.WebApp</div>
+                        <div class="text-accent-500">$ nd templates install NDC.Templates.WebApp</div>
                         <div class="text-green-400">✓ Template installed successfully</div>
 
                         <div class="text-accent-500 mt-2">$ dotnet new ndc-webapp -n EcommerceSite</div>
@@ -1511,16 +1511,16 @@
                         <div class="space-y-3">
                             <h4 class="text-sm font-semibold text-orange-600 dark:text-orange-400 mb-2">Templates & Projects</h4>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">noundry templates list</span>
+                                <span class="text-accent-500">nd templates list</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">noundry templates install</span> <span class="text-gray-600 dark:text-gray-300">NDC.Templates.WebApp</span>
+                                <span class="text-accent-500">nd templates install</span> <span class="text-gray-600 dark:text-gray-300">NDC.Templates.WebApp</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet new ndc-webapp</span> <span class="text-gray-600 dark:text-gray-300">-n MyApp</span>
+                                <span class="text-accent-500">nd dn new ndc-webapp</span> <span class="text-gray-600 dark:text-gray-300">-n MyApp</span>
                             </div>
                             <div class="font-mono text-xs bg-gray-100 dark:bg-gray-700 p-2 rounded">
-                                <span class="text-accent-500">dotnet new ndc-blazor</span> <span class="text-gray-600 dark:text-gray-300">-n MySPA</span>
+                                <span class="text-accent-500">nd dn new ndc-blazor</span> <span class="text-gray-600 dark:text-gray-300">-n MySPA</span>
                             </div>
                         </div>
 
