--- a/docs.html
+++ b/docs.html
@@ -153,6 +153,11 @@
                                     class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
                                 ⚡ Noundry CLI (nd)
                             </button>
+                            <button @click="activeComponent = 'spinup'"
+                                    :class="activeComponent === 'spinup' ? 'text-primary-600 dark:text-primary-400 bg-primary-50 dark:bg-primary-900/20' : 'text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400'"
+                                    class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
+                                🔒 Noundry.Spinup
+                            </button>
                         </div>
                     </div>
 
@@ -400,6 +405,144 @@
                         </p>
                         <a href="nd-cli.html" class="inline-flex items-center bg-accent-600 hover:bg-accent-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
                             View Full nd CLI Documentation
+                            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Noundry.Spinup -->
+                <div x-show="activeComponent === 'spinup'" class="max-w-4xl">
+                    <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">Noundry.Spinup</h1>
+                    <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
+                        Multi-cloud VM provisioning CLI with automatic security hardening. Deploy hardened VMs to AWS, Azure, GCP, and DigitalOcean with a single command.
+                    </p>
+
+                    <div class="bg-gradient-to-r from-emerald-50 to-cyan-50 dark:from-emerald-900/30 dark:to-cyan-900/30 rounded-xl p-6 mb-8 border border-emerald-200 dark:border-emerald-700">
+                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-3">🔒 Security by Default</h3>
+                        <p class="text-gray-700 dark:text-gray-300 mb-4">
+                            Every VM is automatically hardened with UFW firewall, fail2ban, SSH hardening, kernel security settings, and automatic updates. <strong>Your IP address is automatically detected and whitelisted</strong> for SSH access.
+                        </p>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Installation</h2>
+                        <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300 mb-4">
+                            <div class="text-gray-500"># Install as .NET global tool</div>
+                            <div class="text-emerald-400">$ dotnet tool install --global Noundry.Spinup</div>
+                            <div class="mt-3 text-gray-500"># Verify installation</div>
+                            <div class="text-emerald-400">$ spinup validate</div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Security Features Applied by Default</h2>
+                        <div class="grid md:grid-cols-2 gap-4 mb-6">
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">🔐</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">SSH Hardening</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Root login disabled, password auth disabled, key-only authentication</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">🛡️</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">UFW Firewall</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Default deny incoming, your IP whitelisted for SSH</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">🚫</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Fail2ban</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Auto-ban IPs after 3 failed login attempts</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">⚙️</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Kernel Hardening</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">IP spoofing, SYN flood, ICMP attack protection</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Core Commands</h2>
+
+                        <div class="space-y-6">
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
+                                <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3"><code class="bg-emerald-100 dark:bg-emerald-900 text-emerald-600 dark:text-emerald-400 px-2 py-1 rounded">spinup provision</code></h3>
+                                <p class="text-gray-600 dark:text-gray-300 mb-3">Provision a new VM, network, or load balancer.</p>
+                                <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300 space-y-1">
+                                    <div class="text-gray-500"># Interactive wizard</div>
+                                    <div class="text-emerald-400">$ spinup provision</div>
+                                    <div class="mt-2 text-gray-500"># Full CLI mode</div>
+                                    <div class="text-emerald-400">$ spinup provision --cloud aws --region us-east-1 \</div>
+                                    <div class="text-emerald-400">    --resource vm --name my-server -y</div>
+                                </div>
+                            </div>
+
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
+                                <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3"><code class="bg-emerald-100 dark:bg-emerald-900 text-emerald-600 dark:text-emerald-400 px-2 py-1 rounded">spinup list</code></h3>
+                                <p class="text-gray-600 dark:text-gray-300 mb-3">List all provisioned resources.</p>
+                                <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300">
+                                    <div class="text-emerald-400">$ spinup list</div>
+                                </div>
+                            </div>
+
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
+                                <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3"><code class="bg-emerald-100 dark:bg-emerald-900 text-emerald-600 dark:text-emerald-400 px-2 py-1 rounded">spinup destroy</code></h3>
+                                <p class="text-gray-600 dark:text-gray-300 mb-3">Destroy a provisioned resource.</p>
+                                <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300">
+                                    <div class="text-emerald-400">$ spinup destroy --name my-server -y</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Supported Clouds</h2>
+                        <div class="grid md:grid-cols-4 gap-4">
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                                <div class="text-2xl mb-2">☁️</div>
+                                <p class="font-semibold text-gray-900 dark:text-white">AWS</p>
+                                <p class="text-xs text-gray-500 dark:text-gray-400">EC2 instances</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                                <div class="text-2xl mb-2">🔷</div>
+                                <p class="font-semibold text-gray-900 dark:text-white">Azure</p>
+                                <p class="text-xs text-gray-500 dark:text-gray-400">Virtual Machines</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                                <div class="text-2xl mb-2">🌐</div>
+                                <p class="font-semibold text-gray-900 dark:text-white">GCP</p>
+                                <p class="text-xs text-gray-500 dark:text-gray-400">Compute Engine</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4 text-center">
+                                <div class="text-2xl mb-2">🐳</div>
+                                <p class="font-semibold text-gray-900 dark:text-white">DigitalOcean</p>
+                                <p class="text-xs text-gray-500 dark:text-gray-400">Droplets</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Security Levels</h2>
+                        <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300 space-y-1">
+                            <div class="text-gray-500"># Default security (recommended)</div>
+                            <div class="text-emerald-400">$ spinup provision --cloud aws --resource vm --name server</div>
+                            <div class="mt-2 text-gray-500"># Maximum security</div>
+                            <div class="text-emerald-400">$ spinup provision --cloud aws --resource vm --name server --security-level maximum</div>
+                            <div class="mt-2 text-gray-500"># Minimal security</div>
+                            <div class="text-emerald-400">$ spinup provision --cloud aws --resource vm --name server --security-level minimal</div>
+                            <div class="mt-2 text-gray-500"># Custom SSH port</div>
+                            <div class="text-emerald-400">$ spinup provision --cloud aws --resource vm --name server --ssh-port 2222</div>
+                        </div>
+                    </div>
+
+                    <div class="bg-emerald-50 dark:bg-emerald-900/20 rounded-xl p-6">
+                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-3">📚 Full Documentation</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">
+                            For complete documentation, examples, and step-by-step guides, visit the dedicated Spinup page.
+                        </p>
+                        <a href="spinup.html" class="inline-flex items-center bg-emerald-600 hover:bg-emerald-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                            View Full Spinup Documentation
                             <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                             </svg>
