--- a/index.html
+++ b/index.html
@@ -1890,6 +1890,131 @@
         </div>
     </section>
 
+    <!-- Spinup Section -->
+    <section id="spinup" class="py-20 bg-gradient-to-br from-emerald-50 to-cyan-50 dark:from-gray-800 dark:to-gray-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <div class="inline-flex items-center justify-center w-20 h-20 bg-emerald-100 dark:bg-emerald-900 rounded-full mb-6">
+                    <svg class="w-10 h-10 text-emerald-600 dark:text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
+                    </svg>
+                </div>
+                <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Spinup - Secure VM Provisioning</h2>
+                <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
+                    Multi-cloud VM provisioning CLI with automatic security hardening. Deploy hardened VMs to AWS, Azure, GCP, and DigitalOcean with a single command.
+                </p>
+            </div>
+
+            <div class="grid lg:grid-cols-2 gap-12 items-center mb-16">
+                <div class="space-y-6">
+                    <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
+                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
+                            <svg class="w-6 h-6 text-emerald-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
+                            </svg>
+                            Security by Default
+                        </h3>
+                        <p class="text-gray-600 dark:text-gray-300">Every VM is automatically hardened with UFW firewall, fail2ban, SSH hardening, kernel security settings, and automatic updates. Your IP is whitelisted for SSH access.</p>
+                    </div>
+
+                    <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
+                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
+                            <svg class="w-6 h-6 text-emerald-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                            </svg>
+                            Multi-Cloud Support
+                        </h3>
+                        <p class="text-gray-600 dark:text-gray-300">Same CLI for AWS, Azure, GCP, and DigitalOcean. Provision VMs, networks, and load balancers with consistent workflows across all clouds.</p>
+                    </div>
+
+                    <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
+                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
+                            <svg class="w-6 h-6 text-emerald-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                            </svg>
+                            Zero Config Required
+                        </h3>
+                        <p class="text-gray-600 dark:text-gray-300">Interactive wizard or full CLI mode. No YAML files to write. Just install, configure cloud credentials, and deploy.</p>
+                    </div>
+                </div>
+
+                <div class="bg-gray-900 dark:bg-gray-800 rounded-xl p-6 shadow-2xl">
+                    <div class="flex items-center mb-4">
+                        <div class="flex space-x-2">
+                            <div class="w-3 h-3 bg-red-500 rounded-full"></div>
+                            <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
+                            <div class="w-3 h-3 bg-green-500 rounded-full"></div>
+                        </div>
+                        <div class="ml-4 text-gray-400 text-sm font-mono">Spinup CLI</div>
+                    </div>
+                    <div class="font-mono text-sm space-y-2">
+                        <div class="text-gray-500"># Install Spinup</div>
+                        <div class="text-emerald-400">$ dotnet tool install --global Noundry.Spinup</div>
+
+                        <div class="text-gray-500 mt-3"># Provision a secure VM</div>
+                        <div class="text-emerald-400">$ spinup provision --cloud aws --region us-east-1 \</div>
+                        <div class="text-emerald-400">    --resource vm --name prod-server -y</div>
+
+                        <div class="text-gray-400 mt-2">Detecting your public IP for SSH whitelist...</div>
+                        <div class="text-gray-400">  Detected IP: 203.0.113.45</div>
+                        <div class="text-gray-400">  Your IP will be whitelisted for SSH access.</div>
+
+                        <div class="text-emerald-300 mt-2">[✓] Automatic Updates: Enabled</div>
+                        <div class="text-emerald-300">[✓] SSH Hardening: Enabled</div>
+                        <div class="text-emerald-300">[✓] UFW Firewall: Enabled</div>
+                        <div class="text-emerald-300">[✓] Fail2ban: Enabled</div>
+                        <div class="text-emerald-300">[✓] Kernel Hardening: Enabled</div>
+
+                        <div class="text-green-400 mt-2">✅ VM provisioned successfully!</div>
+                        <div class="text-blue-400">🌐 IP: 54.123.45.67</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Security Features Grid -->
+            <div class="grid md:grid-cols-3 gap-8 mb-16">
+                <div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
+                    <div class="w-12 h-12 bg-emerald-100 dark:bg-emerald-900 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <svg class="w-6 h-6 text-emerald-600 dark:text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">SSH Key Auth Only</h3>
+                    <p class="text-gray-600 dark:text-gray-300 text-sm">Password authentication disabled. Root login blocked.</p>
+                </div>
+
+                <div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
+                    <div class="w-12 h-12 bg-emerald-100 dark:bg-emerald-900 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <svg class="w-6 h-6 text-emerald-600 dark:text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">UFW Firewall</h3>
+                    <p class="text-gray-600 dark:text-gray-300 text-sm">Default deny. Your IP whitelisted for SSH.</p>
+                </div>
+
+                <div class="text-center p-6 bg-white dark:bg-gray-800 rounded-xl shadow-lg">
+                    <div class="w-12 h-12 bg-emerald-100 dark:bg-emerald-900 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <svg class="w-6 h-6 text-emerald-600 dark:text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-2">Fail2ban Protection</h3>
+                    <p class="text-gray-600 dark:text-gray-300 text-sm">Auto-ban IPs after failed login attempts.</p>
+                </div>
+            </div>
+
+            <div class="text-center">
+                <a href="spinup.html" class="bg-emerald-600 hover:bg-emerald-700 text-white px-8 py-4 rounded-lg text-lg font-semibold transition-colors inline-flex items-center">
+                    Explore Spinup
+                    <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Documentation Section -->
     <section id="docs" class="py-20 bg-white dark:bg-gray-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
