--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                         </svg>
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Andy AI CLI</h3>
-                    <p class="text-gray-600 dark:text-gray-300">AI-powered command-line tool that generates production-ready Noundry code using trained LLM models--locally.</p>
+                    <p class="text-gray-600 dark:text-gray-300">Agentic AI assistant that autonomously reads, writes, and edits your codebase. Multi-provider support with offline local LLM option.</p>
                 </div>
             </div>
         </div>
@@ -1434,7 +1434,7 @@
                 </div>
                 <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Meet Andy - Your AI Development Partner</h2>
                 <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
-                    Andy is an AI-powered CLI that generates production-ready Noundry code using CodeLlama-7B with LlamaSharp. Generate UI components, services, repositories, and complete CRUD operations with simple natural language commands.
+                    Andy is an agentic AI CLI that reads, writes, and edits your codebase autonomously. Supports Anthropic Claude, OpenAI GPT-4, Google Gemini, or run fully offline with local CodeLlama via CUDA-accelerated LLamaSharp.
                 </p>
             </div>
 
@@ -1445,29 +1445,30 @@
                             <svg class="w-6 h-6 text-orange-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                             </svg>
-                            Template-Based Code Generation
+                            Multi-Provider AI
                         </h3>
-                        <p class="text-gray-600 dark:text-gray-300">Powered by CodeLlama-7B with LlamaSharp, Andy uses proven templates to generate production-ready code instantly. No training required - just describe what you need in natural language.</p>
+                        <p class="text-gray-600 dark:text-gray-300">Choose your AI backend: Anthropic Claude, OpenAI GPT-4, Google Gemini for cloud power, or CodeLlama-7B with CUDA 12 GPU acceleration for fully offline, private development.</p>
                     </div>
 
                     <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
                             <svg class="w-6 h-6 text-orange-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 6.878V6a2.25 2.25 0 0 1 2.25-2.25h7.5A2.25 2.25 0 0 1 18 6v.878m-12 0c.235-.083.487-.128.75-.128h10.5c.263 0 .515.045.75.128m-12 0A2.25 2.25 0 0 0 4.5 9v.878m13.5-3A2.25 2.25 0 0 1 19.5 9v.878m0 0a2.246 2.246 0 0 0-.75-.128H5.25c-.263 0-.515.045-.75.128m15 0A2.25 2.25 0 0 1 21 12v6a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 18v-6c0-.98.626-1.813 1.5-2.122"/>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                             </svg>
-                            Noundry.UI Integration
+                            Agentic Tool Execution
                         </h3>
-                        <p class="text-gray-600 dark:text-gray-300">Generate complete forms with Noundry.UI TagHelpers like &lt;noundry-text-input&gt;, &lt;noundry-button&gt;, and &lt;noundry-card&gt; with built-in validation and Tailwind CSS styling.</p>
+                        <p class="text-gray-600 dark:text-gray-300">Andy autonomously executes tools: <code class="bg-gray-100 dark:bg-gray-700 px-1 rounded">read_file</code>, <code class="bg-gray-100 dark:bg-gray-700 px-1 rounded">write_file</code>, <code class="bg-gray-100 dark:bg-gray-700 px-1 rounded">edit_file</code>, <code class="bg-gray-100 dark:bg-gray-700 px-1 rounded">search_files</code>, <code class="bg-gray-100 dark:bg-gray-700 px-1 rounded">execute_command</code>, and <code class="bg-gray-100 dark:bg-gray-700 px-1 rounded">list_directory</code> to complete complex tasks.</p>
                     </div>
 
                     <div class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-lg">
                         <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-4 flex items-center">
                             <svg class="w-6 h-6 text-orange-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 100 4m0-4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 100 4m0-4v2m0-6V4"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z"></path>
                             </svg>
-                            Smart File Placement
+                            MCP Integration
                         </h3>
-                        <p class="text-gray-600 dark:text-gray-300">Andy analyzes your project structure and places generated files in the correct directories - Models/, Services/, Controllers/, Views/ - following C# conventions automatically.</p>
+                        <p class="text-gray-600 dark:text-gray-300">Connect to NoundryMCP at <code class="bg-gray-100 dark:bg-gray-700 px-1 rounded">mcp.noundry.ai</code> for extended capabilities. Access Noundry templates, documentation, and platform tools directly from your AI conversations.</p>
                     </div>
                 </div>
 
@@ -1478,27 +1479,28 @@
                             <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
                             <div class="w-3 h-3 bg-green-500 rounded-full"></div>
                         </div>
-                        <div class="ml-4 text-gray-400 text-sm font-mono">Andy CLI</div>
+                        <div class="ml-4 text-gray-400 text-sm font-mono">Andy AI</div>
                     </div>
                     <div class="font-mono text-sm space-y-2">
-                        <div class="text-gray-500"># List available templates</div>
-                        <div class="text-accent-500">$ nd templates list --category webapp</div>
-                        <div class="text-green-400">✓ NDC.Templates.WebApp - Full-stack web application</div>
-                        <div class="text-green-400">✓ NDC.Templates.Api - REST API with authentication</div>
-                        <div class="text-green-400">✓ NDC.Templates.MinimalApi - Minimal API template</div>
-                        <div class="text-green-400">✓ NDC.Templates.Blazor - Blazor WebAssembly app</div>
+                        <div class="text-gray-500"># Start Andy with your preferred provider</div>
+                        <div class="text-accent-500">$ andy --provider anthropic</div>
+                        <div class="text-green-400">Andy AI v1.0.0 - Agentic AI Assistant</div>
+                        <div class="text-blue-400">Provider: Anthropic Claude</div>
 
-                        <div class="text-gray-500 mt-3"># Install and create new project</div>
-                        <div class="text-accent-500">$ nd templates install NDC.Templates.WebApp</div>
-                        <div class="text-green-400">✓ Template installed successfully</div>
+                        <div class="text-gray-500 mt-3"># Ask Andy to implement a feature</div>
+                        <div class="text-white">> Add user authentication to this API</div>
+                        <div class="text-yellow-400 mt-1">Executing: read_file("Controllers/UsersController.cs")</div>
+                        <div class="text-yellow-400">Executing: search_files("authentication", "*.cs")</div>
+                        <div class="text-yellow-400">Executing: write_file("Services/AuthService.cs")</div>
+                        <div class="text-yellow-400">Executing: edit_file("Program.cs")</div>
+                        <div class="text-green-400 mt-2">Created AuthService.cs with JWT authentication</div>
+                        <div class="text-green-400">Updated Program.cs with auth middleware</div>
+                        <div class="text-green-400">Added [Authorize] to protected endpoints</div>
 
-                        <div class="text-accent-500 mt-2">$ dotnet new ndc-webapp -n EcommerceSite</div>
-                        <div class="text-green-400">✨ Created EcommerceSite.csproj</div>
-                        <div class="text-green-400">✨ Generated Controllers/, Models/, Views/</div>
-                        <div class="text-green-400">✨ Configured Noundry.UI TagHelpers</div>
-                        <div class="text-green-400">✨ Added Guardian, Sod, DotEnvX libraries</div>
-                        <div class="text-green-400">✨ Set up authentication & database context</div>
-                        <div class="text-blue-400 mt-2">✅ Project ready with best practices built-in!</div>
+                        <div class="text-gray-500 mt-3"># Use slash commands</div>
+                        <div class="text-accent-500">/tools</div>
+                        <div class="text-cyan-400">Available: read_file, write_file, edit_file,</div>
+                        <div class="text-cyan-400">search_files, execute_command, list_directory</div>
                     </div>
                 </div>
             </div>
